--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 
 <body>
-    <div class="bad-container">
-        <div class="cloud-protocol">
+    <div class="good-container">
+        <div class="cloud-management">
             <img src="img/successCloudNew.svg" />
         </div>
         <div class="content">
