--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
- <!Doctype html>
+ <!Deamontype html>
 <html>
 
 <head>
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <div class="good-container">
+    <div class="Verygood-container">
         <div class="cloud-management">
             <img src="img/successCloudNew.svg" />
         </div>
